@@ -1,0 +1,6 @@
+P QUAGGAdaemons Quagga daemons
+P SUNWcsu Core Solaris, (Usr)
+P SUNWcsr Core Solaris Libraries (Root)
+I SUNWzebrar
+I SUNWzebrau
+I CSWzebra
