@@ -1,0 +1,2 @@
+PKG="QUAGGAsmf"
+NAME="@PACKAGE_NAME@ - @PACKAGE_NAME@ SMF support"
