@@ -1,8 +1,6 @@
 i pkginfo=$abs_builddir/pkginfo.daemons.full
 i depend=$abs_builddir/depend.daemons
 i copying=$abs_top_srcdir/COPYING
-i i.manifest
-i r.manifest
 d none @sbindir@=$DESTDIR/@sbindir@ 0755 root bin
 f none @sbindir@/zebra=$DESTDIR/@sbindir@/zebra 0755 root bin
 f none @sbindir@/bgpd=$DESTDIR/@sbindir@/bgpd 0755 root bin
@@ -20,6 +18,3 @@ f none @sysconfdir@/ripngd.conf.sample=$DESTDIR/@sysconfdir@/ripngd.conf.sample 
 f none @sysconfdir@/ospfd.conf.sample=$DESTDIR/@sysconfdir@/ospfd.conf.sample 0644 root bin
 f none @sysconfdir@/ospf6d.conf.sample=$DESTDIR/@sysconfdir@/ospf6d.conf.sample 0644 root bin
 d none @quagga_statedir@=$DESTDIR/@quagga_statedir@ 0711 @enable_user@ @enable_group@
-f manifest var/svc/manifest/network/quagga.xml 0444 root bin
-#f none var/svc/profile/@PACKAGE_TARNAME@_options.xml=$abs_builddir/options.xml 0755 root sys
-f none lib/svc/method/quagga=$abs_builddir/quagga.init 0755 root bin
